@@ -123,6 +123,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|SolrDocumentList
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|Test
@@ -135,6 +148,15 @@ operator|.
 name|io
 operator|.
 name|IOException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 begin_comment
@@ -196,7 +218,7 @@ DECL|field|oddField
 name|String
 name|oddField
 init|=
-literal|"oddField_s"
+literal|"oddField_s1"
 decl_stmt|;
 annotation|@
 name|Test
@@ -3042,6 +3064,372 @@ argument_list|,
 literal|"group.limit"
 argument_list|,
 literal|10
+argument_list|)
+expr_stmt|;
+comment|// some explicit checks of non default sorting, and sort/group.sort with diff clauses
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!func}id"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|100
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tlong
+operator|+
+literal|",id,"
+operator|+
+name|i1
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+name|i1
+argument_list|,
+literal|"group.limit"
+argument_list|,
+literal|10
+argument_list|,
+literal|"sort"
+argument_list|,
+name|tlong
+operator|+
+literal|" asc, id desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!func}id"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|100
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tlong
+operator|+
+literal|",id,"
+operator|+
+name|i1
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+name|i1
+argument_list|,
+literal|"group.limit"
+argument_list|,
+literal|10
+argument_list|,
+literal|"sort"
+argument_list|,
+literal|"id asc"
+argument_list|,
+literal|"group.sort"
+argument_list|,
+name|tlong
+operator|+
+literal|" asc, id desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!func}id"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|100
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tlong
+operator|+
+literal|",id,"
+operator|+
+name|i1
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+name|i1
+argument_list|,
+literal|"group.limit"
+argument_list|,
+literal|10
+argument_list|,
+literal|"sort"
+argument_list|,
+name|tlong
+operator|+
+literal|" asc, id desc"
+argument_list|,
+literal|"group.sort"
+argument_list|,
+literal|"id asc"
+argument_list|)
+expr_stmt|;
+name|rsp
+operator|=
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"{!func}id"
+argument_list|,
+literal|"fq"
+argument_list|,
+name|oddField
+operator|+
+literal|":[* TO *]"
+argument_list|,
+literal|"rows"
+argument_list|,
+literal|100
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tlong
+operator|+
+literal|",id,"
+operator|+
+name|i1
+argument_list|,
+literal|"group"
+argument_list|,
+literal|"true"
+argument_list|,
+literal|"group.field"
+argument_list|,
+name|i1
+argument_list|,
+literal|"group.limit"
+argument_list|,
+literal|10
+argument_list|,
+literal|"sort"
+argument_list|,
+name|tlong
+operator|+
+literal|" asc"
+argument_list|,
+literal|"group.sort"
+argument_list|,
+name|oddField
+operator|+
+literal|" asc"
+argument_list|)
+expr_stmt|;
+name|nl
+operator|=
+operator|(
+name|NamedList
+argument_list|<
+name|?
+argument_list|>
+operator|)
+name|rsp
+operator|.
+name|getResponse
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"grouped"
+argument_list|)
+expr_stmt|;
+name|nl
+operator|=
+operator|(
+name|NamedList
+argument_list|<
+name|?
+argument_list|>
+operator|)
+name|nl
+operator|.
+name|get
+argument_list|(
+name|i1
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|rsp
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|6
+argument_list|,
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"matches"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|rsp
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|2
+argument_list|,
+operator|(
+operator|(
+name|List
+argument_list|<
+name|NamedList
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
+operator|)
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"groups"
+argument_list|)
+operator|)
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|nl
+operator|=
+operator|(
+operator|(
+name|List
+argument_list|<
+name|NamedList
+argument_list|<
+name|?
+argument_list|>
+argument_list|>
+operator|)
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"groups"
+argument_list|)
+operator|)
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|rsp
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|232
+argument_list|,
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"groupValue"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|SolrDocumentList
+name|docs
+init|=
+operator|(
+name|SolrDocumentList
+operator|)
+name|nl
+operator|.
+name|get
+argument_list|(
+literal|"doclist"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|docs
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|5
+argument_list|,
+name|docs
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|docs
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|22
+argument_list|,
+name|docs
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getFirstValue
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|docs
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+literal|21
+argument_list|,
+name|docs
+operator|.
+name|get
+argument_list|(
+literal|4
+argument_list|)
+operator|.
+name|getFirstValue
+argument_list|(
+literal|"id"
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// Can't validate the response, but can check if no errors occur.
